added css attribute selector

--- a/css/switch_colors.css
+++ b/css/switch_colors.css
@@ -1,2 +1,7 @@
-/* CSS Document */
+div[data-present="absent"] {
+  background-color: red;
+}
 
+div[data-present="absent"] {
+  background-color: green;
+}
