updated css present to green

--- a/css/switch_colors.css
+++ b/css/switch_colors.css
@@ -2,6 +2,6 @@ div[data-present="absent"] {
   background-color: red;
 }
 
-div[data-present="absent"] {
+div[data-present="present"] {
   background-color: green;
 }
